# IVS_Kalkulacka

./: .gitignore  README.md  hodnoceni.txt  skutecnost.txt
.github/actions/CI_Test/: CI_Test.yaml  Dockerfile  script.sh  spinlock.sh
.github/workflows/: CIworkflow.yml
headers/: mathlibrary.h
plan/: xjordan00_xmikoja00_xcontop00_xziklaa00_plan.txt
profiling/: gprof-report-milion.txt  gprof-report-ten.txt  gprof-report-thousand.txt  profiling  zprava.txt
src/: CMakeLists.txt  Doxyfile  E-Calculator.desktop  Ivs_Calculator.desktop  Makefile  README.md  Resources.qrc  about.cpp  about.h  about.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math_engine.cpp  math_engine.h  mathlibrary.h  settings.cpp  settings.h  settings.ui  svgbutton.cpp  svgbutton.h
src/mathlib/: CMakeLists.txt  mathlibrary.cpp
src/mathlib/include/: mathlibrary.h
src/mathlib/tests/: mathlib_additional_tests.cpp  mathlib_goniomentry_test.cpp  mathlib_goniometry_test.cpp  mathlib_tdd_tests.cpp
src/profiler/: CMakeLists.txt  stddev.cpp
src/tests/: MathEngine_tests.cpp
user_guide/: user_guide.aux  user_guide.tex  user_guide.toc
